@@ -311,6 +311,13 @@ let explicit_arity =
       | _ -> false
     )
 
+let warn_on_literal_pattern =
+  List.exists
+    (function
+      | ({txt="ocaml.warn_on_literal_pattern"|"warn_on_literal_pattern"; _}, _) -> true
+      | _ -> false
+    )
+
 (* Typing of patterns *)
 
 (* unification inside type_pat*)
@@ -1067,6 +1074,12 @@ let rec type_pat ~constrs ~labels ~no_existentials ~mode ~env sp expected_ty =
                                      Warnings.Wildcard_arg_to_constant_constr;
             replicate_list sp constr.cstr_arity
         | Some sp -> [sp] in
+      begin match sargs with
+      | [{ppat_desc = Ppat_constant _} as sp] when warn_on_literal_pattern constr.cstr_attributes ->
+            Location.prerr_warning sp.ppat_loc
+              Warnings.Fragile_literal_pattern
+      | _ -> ()
+      end;
       if List.length sargs <> constr.cstr_arity then
         raise(Error(loc, !env, Constructor_arity_mismatch(lid.txt,
                                      constr.cstr_arity, List.length sargs)));
