@@ -32,6 +32,11 @@ Language features:
   * "noalloc" becomes [@@noalloc]
   Deprecate "float" and "noalloc".
   (Jérémie Dimino)
+- GPR#254: @ocaml.arg_on_literal_pattern attribute on constructors to
+  warn when the argument is matches against a constant pattern.  This
+  attributes is applied on predefined exception constructors which
+  take an purely informational (with no stability guarantee) message.
+  (Alain Frisch)
 
 Compilers:
 - PR#4800: better compilation of tuple assignment (Gabriel Scherer and
